--- a/src/main/resources/templates/infrastructure/repository.mustache
+++ b/src/main/resources/templates/infrastructure/repository.mustache
@@ -15,17 +15,17 @@ import java.util.Optional;
 @Repository
 public interface {{entityName}}Repository extends JpaRepository<{{entityName}}, String> {
 
-//@Query("SELECT t FROM {{entityName}} t ")
-Page<{{entityName}}> findAll(Pageable pageable);
+	@Query("SELECT t FROM {{entityName}} t ")
+	Page<{{entityName}}> findAll(Pageable pageable);
 
-//@Query("SELECT t FROM {{entityName}} t WHERE t.id = :id")
-Optional<{{entityName}}> findById({{entityName}}{{identifier.nameCapitalized}} id);
-
-{{#searchable}}
+	@Query("SELECT t FROM {{entityName}} t WHERE t.id = :id")
+	Optional<{{entityName}}> findById({{entityName}}{{identifier.nameCapitalized}} id);
+{{#fields}}
 	{{^isId}}
-	@Query("SELECT t FROM {{entityName}} t WHERE t.{{name}} = :{{name}}")
-	List<{{entityName}}> findBy{{nameCapitalized}}({{primitiveType}} {{name}});
+	@Query("SELECT t FROM {{entityName}} t WHERE t.{{nameLowerCase}} = :{{nameLowerCase}}")
+	List<{{entityName}}> findBy{{nameCapitalized}}({{primitiveType}} {{nameLowerCase}});
+
 	{{/isId}}
-{{/searchable}}
+{{/fields}}
 
 }
