--- a/src/main/resources/templates/tests/fixtures.mustache
+++ b/src/main/resources/templates/tests/fixtures.mustache
@@ -1,7 +1,7 @@
 package {{package}};
 
 {{#imports}}
-	import {{.}};
+import {{.}};
 {{/imports}}
 
 import {{base}}.{{vo}}.*;
@@ -10,6 +10,8 @@ import java.util.List;
 import java.util.UUID;
 import org.axonframework.commandhandling.gateway.CommandGateway;
 import org.springframework.mock.web.MockMultipartFile;
+import java.util.concurrent.TimeUnit;
+import static org.awaitility.Awaitility.await;
 
 public class {{name}}Fixtures {
 
@@ -18,22 +20,7 @@ public static {{name}} randomOne({{name}}Repository repository) {
 entity.setId(UUID.randomUUID().toString());
 {{#fields}}
 	{{^isId}}
-		{{#isString}}
-			entity.set{{nameCapitalized}}("Sample {{nameCapitalized}}");
-		{{/isString}}
-		{{#isInteger}}
-			entity.set{{nameCapitalized}}(123);
-		{{/isInteger}}
-		{{#isDouble}}
-			entity.set{{nameCapitalized}}(999.99);
-		{{/isDouble}}
-		{{^isString}}
-			{{^isInteger}}
-				{{^isDouble}}
-					entity.set{{nameCapitalized}}(null);
-				{{/isDouble}}
-			{{/isInteger}}
-		{{/isString}}
+		entity.set{{nameCapitalized}}({{{testValue}}});
 	{{/isId}}
 {{/fields}}
 return repository.save(entity);
@@ -44,6 +31,21 @@ return repository.findAll().stream().findFirst().orElseGet(() -> randomOne(repos
 }
 
 public static {{name}} byId({{name}}Repository repository, String id) {
+
+	return repository.findById(id).orElse(null);
+}
+
+public static {{name}} byIdWaitExist({{name}}Repository repository, String id) {
+
+	await().atMost(5, TimeUnit.SECONDS).until(() -> byId(repository, id) != null);
+
+	return repository.findById(id).orElse(null);
+}
+
+public static {{name}} byIdWaitNotExist({{name}}Repository repository, String id) {
+
+	await().atMost(5, TimeUnit.SECONDS).until(() -> byId(repository, id) == null);
+
 return repository.findById(id).orElse(null);
 }
 
@@ -66,17 +68,12 @@ String fileName = files.getName();
 {{/hasFiles}}
 Create{{name}}Command command = new Create{{name}}Command(
 {{#fields}}{{^isId}}{{entity}}{{nameCapitalized}}.create(
-		{{#isString}}"Sample {{nameCapitalized}}"{{/isString}}
-		{{#isInteger}}123{{/isInteger}}
-		{{#isDouble}}999.99{{/isDouble}}
-		{{^isString}}{{^isInteger}}{{^isDouble}}null{{/isDouble}}{{/isInteger}}{{/isString}}
-		){{^last}},{{/last}}{{/isId}}{{/fields}}{{#hasFiles}},{{#fieldFiles}}
+		{{{testValue}}}){{^last}},{{/last}}{{/isId}}{{/fields}}{{#hasFiles}},{{#fieldFiles}}
 	{{entity}}{{nameCapitalized}}.create(fileName){{^last}},{{/last}}
 {{/fieldFiles}}
 {{/hasFiles}}
 );
 return commandGateway.sendAndWait(command).toString();
 }
-
 
 }
