bugfix: fix secure

--- a/src/main/resources/templates/infrastructure/security/registerController.mustache
+++ b/src/main/resources/templates/infrastructure/security/registerController.mustache
@@ -25,9 +25,9 @@ public ResponseEntity<AuthResponseDto> register(@RequestBody AuthRequestDto requ
 	.builder()
 	.token(null)
 	.code(0)
-	.message("BAD_REQUEST")
+	.message(e.getMessage())
 	.build()
 	);
 	}
 	}
-	}
+}
