--- a/src/main/resources/templates/infrastructure/security/registerUser.mustache
+++ b/src/main/resources/templates/infrastructure/security/registerUser.mustache
@@ -31,6 +31,7 @@ String token = jwtService.generateToken(new UserPrincipal(user));
 return AuthResponseDto
 	.builder()
 	.token(token)
+	.username(user.getUsername())
 	.code(1)
 	.message("Login successful")
 	.build();
