--- a/src/main/resources/templates/infrastructure/security/authController.mustache
+++ b/src/main/resources/templates/infrastructure/security/authController.mustache
@@ -33,6 +33,7 @@ public ResponseEntity<AuthResponseDto> authenticate(@RequestBody AuthRequestDto 
 	AuthResponseDto
 	.builder()
 	.token(token)
+	.username(user.getUsername())
 	.code(1)
 	.message("Login successful")
 	.build()
@@ -44,7 +45,7 @@ public ResponseEntity<AuthResponseDto> authenticate(@RequestBody AuthRequestDto 
 	.builder()
 	.token(null)
 	.code(0)
-	.message("UNAUTHORIZED")
+	.message(e.getMessage())
 	.build()
 	);
 	}
