bugfix: fix secure
[wip] fix security tests

--- a/src/main/resources/templates/infrastructure/security/authRequestDto.mustache
+++ b/src/main/resources/templates/infrastructure/security/authRequestDto.mustache
@@ -8,8 +8,10 @@ import java.io.Serializable;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import lombok.Builder;
 
 @Data
+@Builder
 @NoArgsConstructor
 @AllArgsConstructor
 public class AuthRequestDto implements Serializable {
