--- a/src/main/resources/templates/infrastructure/security/securityConfig.mustache
+++ b/src/main/resources/templates/infrastructure/security/securityConfig.mustache
@@ -1,7 +1,7 @@
 package {{package}};
 
 {{#imports}}
-	import {{.}};
+import {{.}};
 {{/imports}}
 
 import lombok.RequiredArgsConstructor;
@@ -16,49 +16,71 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
+import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
+import io.swagger.v3.oas.models.security.SecurityScheme;
+
+
 @Configuration
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-private final JwtAuthenticationFilter jwtAuthFilter;
+	private final JwtAuthenticationFilter jwtAuthFilter;
 
-@Bean
-public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-return config.getAuthenticationManager();
-}
+	@Bean
+	public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+	return config.getAuthenticationManager();
+	}
 
-@Bean
-public PasswordEncoder passwordEncoder() {
-return new BCryptPasswordEncoder();
-}
+	@Bean
+	public PasswordEncoder passwordEncoder() {
+	return new BCryptPasswordEncoder();
+	}
 
 
-@Bean
-public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+	@Bean
+	public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
-http
+	http
 		.csrf(
-		csrf -> csrf.disable()
-		)
+			csrf -> csrf.disable()
+			)
 		.authorizeHttpRequests(
-			auth -> auth
-				.requestMatchers(
-				"/api/auth/**",
-				"/api/v1/status",
-				"/swagger-ui.html",
-				"/swagger-ui/**",
-				"/v3/api-docs/**",
-				"/v3/api-docs.yaml",
-				"/swagger-resources/**",
-				"/webjars/**"
-			).permitAll()
-		.anyRequest().authenticated()
+		auth -> auth
+			.requestMatchers(
+			"/api/auth/**",
+			"/api/v1/status",
+			"/swagger-ui.html",
+			"/swagger-ui/**",
+			"/v3/api-docs/**",
+			"/v3/api-docs.yaml",
+			"/swagger-resources/**",
+			"/webjars/**"
+		).permitAll()
+			.anyRequest().authenticated()
 		)
 		.sessionManagement(
 		sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 		.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
 
-return http.build();
-}
+		return http.build();
+	}
+
+		@Bean
+		public OpenAPI customOpenAPI() {
+
+			return new OpenAPI()
+						.info(new Info().title("API").version("1.0"))
+						.addSecurityItem(new SecurityRequirement().addList("bearerAuth"))
+						.components(new io.swagger.v3.oas.models.Components()
+						.addSecuritySchemes("bearerAuth",
+					new SecurityScheme()
+						.type(SecurityScheme.Type.HTTP)
+						.scheme("bearer")
+						.bearerFormat("JWT")));
+		}
+
+
 }
