--- a/src/main/resources/templates/tests/createControllerIntegrationTest.mustache
+++ b/src/main/resources/templates/tests/createControllerIntegrationTest.mustache
@@ -14,11 +14,10 @@ public class {{name}}CreateControllerIntegrationTest extends BaseIntegrationTest
 
 @Test
 void it_should_be_able_to_add_{{nameLower}}() {
-{{name}}Request requestDTO = {{name}}Request.random();
-HttpEntity<{{name}}Request> request = new HttpEntity<>(requestDTO);
 
-		String uri = "/v1/commands/{{nameLower}}";
-		ResponseEntity<{{name}}Response> response = this.postForEntity(uri, request, {{name}}Response.class);
+		{{name}}Request requestDTO = {{name}}Request.random();
+ 		String uri = "/v1/commands/{{nameLower}}";
+		ResponseEntity<{{name}}Response> response = this.postForEntity(uri, requestDTO, {{name}}Response.class);
 		assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
 		assertThat(response.getBody()).isNotNull();
 		assertThat(response.getBody().getId()).isNotNull();
