--- a/src/main/resources/templates/tests/createWithFilesControllerIntegrationTest.mustache
+++ b/src/main/resources/templates/tests/createWithFilesControllerIntegrationTest.mustache
@@ -9,12 +9,24 @@ import org.springframework.http.*;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import static org.assertj.core.api.Assertions.assertThat;
+import org.axonframework.commandhandling.gateway.CommandGateway;
+import org.springframework.beans.factory.annotation.Autowired;
 
 public class {{name}}CreateControllerIntegrationTest extends BaseIntegrationTests {
 
+@Autowired
+private CommandGateway commandGateway;
+
 @Test
 void it_should_be_able_to_add_{{nameLower}}() {
-{{name}}Request requestDTO = {{name}}Request.random();
+
+	{{name}}Request requestDTO = new {{name}}Request();
+
+	{{#fields}}
+		{{^isId}}
+	requestDTO.set{{nameCapitalized}}({{{testValue}}});
+		{{/isId}}
+	{{/fields}}
 
 MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
 {{#fields}}
