--- a/src/main/resources/templates/infrastructure/security/authController.mustache
+++ b/src/main/resources/templates/infrastructure/security/authController.mustache
@@ -11,16 +11,16 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.web.bind.annotation.*;
+import io.swagger.v3.oas.annotations.tags.Tag;
 
+@Tag(name = "Auth", description = "Endpoints login ")
 @RestController
 @RequestMapping("/api/auth")
 @RequiredArgsConstructor
 public class AuthController {
-
 private final AuthenticationManager authenticationManager;
 private final UserDetailsService userDetailsService;
 private final JwtService jwtService;
-
 @PostMapping("/login")
 public ResponseEntity<AuthResponseDto> authenticate(@RequestBody AuthRequestDto request) {
 	try {
