--- a/src/main/resources/templates/infrastructure/security/registerController.mustache
+++ b/src/main/resources/templates/infrastructure/security/registerController.mustache
@@ -6,7 +6,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import io.swagger.v3.oas.annotations.tags.Tag;
 
+@Tag(name = "Auth", description = "Endpoints registration ")
 @RestController
 @RequestMapping("/api/auth")
 @RequiredArgsConstructor
