--- a/src/main/resources/templates/presentation/projection.mustache
+++ b/src/main/resources/templates/presentation/projection.mustache
@@ -4,11 +4,15 @@ package {{package}};
 import {{.}};
 {{/imports}}
 
+import org.axonframework.eventhandling.AllowReplay;
+import org.axonframework.config.ProcessingGroup;
 import org.springframework.stereotype.Component;
 import lombok.extern.slf4j.Slf4j;
 
+@AllowReplay(value = false)
 @Slf4j
 @Component
+@ProcessingGroup("{{name}}")
 public class {{name}}Projection {
 
 private final {{name}}Repository repository;
@@ -39,6 +43,8 @@ repository.save(entity);
 log.info("{{name}} inserted: {}", entity);
 } catch (Exception e) {
 log.error("Error saving {{name}}: {}", e.getMessage(), e);
+
+throw e;
 }
 }
 
@@ -59,6 +65,7 @@ try {
 	log.info("{{name}} updated successfully: {}", event.getId().value());
 	} catch (Exception e) {
 	log.error("Error updating {{name}}: {}", e.getMessage(), e);
+	throw e;
 	}
 }
 
@@ -68,7 +75,8 @@ try {
 repository.deleteById(event.getId().value());
 log.info("{{name}} deleted successfully: {}", event.getId().value());
 } catch (Exception e) {
-log.error("Error deleting {{name}}: {}", e.getMessage(), e);
+	log.error("Error deleting {{name}}: {}", e.getMessage(), e);
+	throw e;
 }
 }
 }
