--- a/src/main/resources/templates/tests/deletecontrollerintegrationtest.mustache
+++ b/src/main/resources/templates/tests/deletecontrollerintegrationtest.mustache
@@ -22,7 +22,7 @@ private CommandGateway commandGateway;
 @Test
 void it_should_be_able_to_delete_{{nameLower}}() {
 	String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway).getId().value();
-	String uri = "/v1/commands/{{nameLower}}/" + existingId;
+	String uri = "/v1/commands/{{entityUnCapitalized}}/" + existingId;
 
 	ResponseEntity<String> rep = this.delete(uri);
 	assertThat(rep.getStatusCode().value()).isEqualTo(200);
