--- a/src/main/resources/templates/infrastructure/security/authRequestDto.mustache
+++ b/src/main/resources/templates/infrastructure/security/authRequestDto.mustache
@@ -10,11 +10,17 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.Builder;
 
+import io.swagger.v3.oas.annotations.media.Schema;
+
 @Data
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
 public class AuthRequestDto implements Serializable {
-private String username;
-private String password;
+
+	@Schema(description = "User ", example = "admin")
+	private String username;
+
+	@Schema(description = "Password", example = "admin")
+	private String password;
 }
