--- a/src/main/resources/templates/presentation/listController.mustache
+++ b/src/main/resources/templates/presentation/listController.mustache
@@ -16,11 +16,17 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-
 import java.util.concurrent.CompletableFuture;
+{{#security}}
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.Authentication;
+{{/security}}
 
+{{#security}}
+@PreAuthorize("@{{nameLower}}Gate.canList(authentication)")
+{{/security}}
 @RestController
-@RequestMapping("/api/v1/queries/list-{{nameLower}}")
+@RequestMapping("/api/v1/queries/{{nameLower}}s")
 @Tag(name = "{{name}} Queries", description = "Endpoints for listing paginated {{nameLower}}s")
 public class {{name}}ListController {
 
