--- a/src/main/resources/templates/presentation/updateWithFilesController.mustache
+++ b/src/main/resources/templates/presentation/updateWithFilesController.mustache
@@ -17,7 +17,15 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import lombok.AllArgsConstructor;
+import jakarta.validation.Valid;
+{{#security}}
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.Authentication;
+{{/security}}
 
+{{#security}}
+@PreAuthorize("@{{nameLowercase}}Gate.canEdit(authentication, #id)")
+{{/security}}
 @RestController
 @RequestMapping("/api/v1/commands/{{nameLowercase}}")
 @Tag(name = "{{name}} commands", description = "Endpoints for managing {{nameLowercase}}s")
