--- a/src/main/resources/templates/tests/createWithFilesControllerIntegrationTest.mustache
+++ b/src/main/resources/templates/tests/createWithFilesControllerIntegrationTest.mustache
@@ -42,7 +42,7 @@ headers.setContentType(MediaType.MULTIPART_FORM_DATA);
 
 HttpEntity<MultiValueMap<String, Object>> requestEntity = new HttpEntity<>(body, headers);
 
-String uri = "/v1/commands/{{nameLower}}";
+String uri = "/v1/commands/{{entityUnCapitalized}}";
 ResponseEntity<{{name}}Response> response =
 	this.postForEntity(uri, requestEntity, {{name}}Response.class);
 	assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
