--- a/src/main/resources/templates/domain/mailSender.mustache
+++ b/src/main/resources/templates/domain/mailSender.mustache
@@ -5,5 +5,5 @@ import {{.}};
 {{/imports}}
 
 public interface {{className}}  {
-	void send(String to, String subject, String content);
+	void send(String from, String to, String subject, String content);
 }
